--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "symfony/framework-bundle": "^4.4|^5.4|^6.0",
     "symfony/yaml": "^4.4|^5.4|^6.0",
     "symfony/console": "^4.4|^5.4|^6.0",
-    "symfony/process": "^6.0"
+    "symfony/process": "^6.0",
+    "phpunit/phpunit": "^9.5"
   }
 }
