--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "symfony/yaml": "^4.4|^5.4|^6.0",
     "symfony/console": "^4.4|^5.4|^6.0",
     "symfony/process": "^6.0",
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "symfony/browser-kit": "^6.0"
   }
 }
