--- a/.env
+++ b/.env
@@ -13,4 +13,11 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
-COMPOSE_PROJECT_NAME=cookies_consent_bundle
+# This is used by docker to name your container
+COMPOSE_PROJECT_NAME=my_bundle
+
+# APP_SECRET environment variable is required to generate CSRF tokens and will be used by docker.
+# By default for symfony/framework-bundle generates one when it's installed via Symfony Flex.
+# If you do not use Flex, make sure to change your APP_SECRET =.
+# The default value is ThisTokenIsNotSoSecretChangeIt , change it.
+APP_SECRET=ThisTokenIsNotSoSecretChangeIt
