--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,20 +7,17 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.operating-system }}
+    runs-on: 'ubuntu-latest'
     strategy:
       matrix:
-        operating-system: [ ubuntu-latest ]
         php: [ '7.4', '8.0', '8.1' ]
         symfony: ['4.4', '5.4', '6.0']
-        exclude:
-          # excludes symfony 4.4 on linux-php-7.4
-          - operating-system: ubuntu-latest
-            php: '8.0'
-            symfony: '4.4'
-          - operating-system: ubuntu-latest
-            php: '8.1'
-            symfony: '4.4'
+#        exclude:
+#          # excludes symfony 4.4 and PHP 8+
+#          - php: '8.0'
+#            symfony: '4.4'
+#          - php: '8.1'
+#            symfony: '4.4'
 
     name: With PHP ${{ matrix.php }} and Symfony ${{ matrix.symfony }}
     steps:
