--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -12,12 +12,10 @@ jobs:
       matrix:
         php: [ '7.4', '8.0', '8.1' ]
         symfony: ['4.4', '5.4', '6.0']
-#        exclude:
-#          # excludes symfony 4.4 and PHP 8+
-#          - php: '8.0'
-#            symfony: '4.4'
-#          - php: '8.1'
-#            symfony: '4.4'
+        exclude:
+          # excludes symfony 6.0 and PHP 7.4
+          - php: '7.4'
+            symfony: '6.0'
 
     name: With PHP ${{ matrix.php }} and Symfony ${{ matrix.symfony }}
     steps:
