--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,6 +16,10 @@ jobs:
           # excludes symfony 6.0 and PHP 7.4
           - php: '7.4'
             symfony: '6.0'
+          - php: '8.0'
+            symfony: '4.4'
+          - php: '8.1'
+            symfony: '4.4'
 
     name: With PHP ${{ matrix.php }} and Symfony ${{ matrix.symfony }}
     steps:
